--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 # GUI
 PySide6>=6.6.0
+pygame>=2.5.2
+
+# Text-to-Speech
+gTTS>=2.3.1
+pyttsx3>=2.90
+
+# Translation
+googletrans>=4.0.0-rc1
 
 # Core deep learning & ML
 tensorflow>=2.16.0
@@ -28,7 +36,7 @@ paramiko>=3.4.0
 # For encryption (ChaCha20)
 pycryptodome>=3.20.0
 
-# Windows
-winshell
-pywin32
-psutil
+# Windows utilities
+winshell>=0.6
+pywin32>=305
+psutil>=5.9.6
