Integrated the tts
Logic added to user preference:
- Added translate to logic.
- Added voice selection.
- Added speed selection logic

Added download audio logic. Enables the user to download the .mp3 file to their machine

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gTTS>=2.3.1
 pyttsx3>=2.90
 
 # Translation
-googletrans>=4.0.0-rc1
+deep-translator
 
 # Core deep learning & ML
 tensorflow>=2.16.0
